# aniebot

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  personality.md
.copilot/: copilot-instructions.md
.github/: copilot-instructions.md
docs/: design.md  design_plan.md  design_plan2.md  parallelization_plan.md  tools.md
src/: agenda.rs  agent_session.rs  bot.rs  cli_wrapper.rs  config.rs  core_memory.rs  episodic.rs  lm.rs  main.rs  memory.rs  orchestrator.rs  schedule_store.rs  scheduler.rs  tools.rs
